# pqcrypto

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build.py  compile.py  document.py  pyproject.toml
.github/workflows/: ci.yml
templates/: definitions_kem.c.j2  definitions_sign.c.j2  wrapper_kem.py.j2  wrapper_sign.py.j2
tests/: conftest.py  test_kem.py  test_sign.py
