[project]
name = "pqcrypto"
version = "0.3.2"
description = "Post-quantum cryptography for Python."
authors = [{ name = "Backbone Authors", email = "root@backbone.dev" }]
license = "Apache-2.0"
readme = "README.md"
keywords = ["post-quantum", "cryptography", "security", "pqclean"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
requires-python = ">=3.9"

[project.urls]
"Repository" = "https://github.com/backbone-hq/pqcrypto"
"Bug Tracker" = "https://github.com/backbone-hq/pqcrypto/issues"

[dependency-groups]
dev = [
    "cffi>=1.17.1",
    "cibuildwheel>=2.23.2",
    "hatchling>=1.27.0",
    "jinja2>=3.1.6",
    "pytest>=8.3.5",
    "setuptools>=78.1.0",
]

[build-system]
requires = ["hatchling", "cffi", "jinja2", "setuptools"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = ["pqclean"]

[tool.cibuildwheel]
before-build = "pip install cffi jinja2 setuptools && python compile.py"
skip = "pp*-win*"

[tool.setuptools]
py-modules = ["pqcrypto"]

[tool.hatch.build]
pure-python = false
ignore-vcs = true
include = ["pqcrypto"]
exclude = ["pqcrypto/**/*.c", "pqcrypto/**/*.o", "Release"]
artifacts = [
    "pqcrypto/_kem/*.so",
    "pqcrypto/_kem/*.pyd",
    "pqcrypto/_sign/*.so",
    "pqcrypto/_sign/*.pyd"
]

[tool.hatch.build.hooks.custom]
path = "build.py"
